unpackaged/main/default/objects/Off_site_agreement__c/fields/Scheduled_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email for the Customer</description>
    <inlineHelpText>Email for the Customer</inlineHelpText>
    <label>Scheduled Email Sent</label>
    <type>Checkbox</type>
</CustomField>