unpackaged/main/default/objects/Off_site_agreement__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <formula>TIMEVALUE( Scheduled_Date__c )

/*TIMEVALUE( Scheduled_Date__c+0.041666667 )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Time</label>
    <type>Time</type>
</CustomField>