unpackaged/main/default/objects/Off_site_agreement__c/fields/Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, pending email has been sent to Customer - untick and save to send again</description>
    <inlineHelpText>If ticked, Email has been sent to Customer - untick and save to send again</inlineHelpText>
    <label>Pending Email Sent</label>
    <type>Checkbox</type>
</CustomField>