unpackaged/main/default/objects/Off_site_agreement__c/fields/Siclops_Call_Ref__c.field-meta.xml
<CustomField>
    <fullName>Siclops_Call_Ref__c</fullName>
    <label>Siclops Call Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>