unpackaged/main/default/objects/Off_site_agreement__c/fields/Siclops_Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Siclops_Stage_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Siclops Stage 1</label>
    <type>Checkbox</type>
</CustomField>