unpackaged/main/default/objects/Off_site_agreement__c/fields/Sign_Off_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Form_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,
&quot;https://aspect.co.uk/forms/final-payment/&quot;,
&quot;https://aspect.co.uk.hyv.gotest.it/forms/final-payment/&quot;)
&amp;&quot;?cli=&quot;&amp; 

SUBSTITUTE(Customer_first_name__c,&quot; &quot;,&quot;%20&quot;)
 &amp;&quot;%20&quot;&amp;

SUBSTITUTE(Customer_last_name__c,&quot; &quot;,&quot;%20&quot;)


&amp;&quot;&amp;ref=&quot; &amp;TEXT(Off_Site_Agreement_Number__c)

&amp;&quot;&amp;id=&quot;&amp; Id 
&amp;&quot;&amp;eid=&quot;&amp;Allocated_Engineer__r.Id
&amp;&quot;&amp;eng=&quot;&amp;SUBSTITUTE(Allocated_Engineer__r.Name,&quot; &quot;,&quot;%20&quot;)

&amp;&quot;&amp;cem=&quot;&amp; Customer_email__c 

&amp;&quot;&amp;bal=&quot;&amp; TEXT(Final_Payment_Required__c) &amp;

&quot;&amp;a=&quot;&amp; TEXT(MOD( FLOOR(Final_Payment_Required__c),8)) &amp;
&quot;&amp;b=&quot;&amp; TEXT(MOD( FLOOR(Final_Payment_Required__c/8),8)) &amp;
&quot;&amp;c=&quot;&amp; TEXT(MOD( FLOOR(Final_Payment_Required__c/(8*8)),8)) &amp;
&quot;&amp;d=&quot;&amp; TEXT(MOD( FLOOR(Final_Payment_Required__c/(8*8*8)),8)) &amp;
&quot;&amp;e=&quot;&amp; TEXT(MOD( FLOOR(Final_Payment_Required__c/(8*8*8*8)),8)) &amp;
&quot;&amp;f=&quot;&amp; TEXT(MOD( FLOOR(Final_Payment_Required__c/(8*8*8*8*8)),8)) &amp;

&quot;&amp;x=&quot;&amp; TEXT(MOD( MOD(Final_Payment_Required__c,1)*100,8)) &amp;
&quot;&amp;y=&quot;&amp; TEXT(MOD( FLOOR(MOD(Final_Payment_Required__c,1)*100/8),8)) &amp;
&quot;&amp;z=&quot;&amp; TEXT(MOD( FLOOR(MOD(Final_Payment_Required__c,1)*100/(8*8)),8))

&amp;&quot;&amp;t=0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Off Form URL</label>
    <type>Text</type>
</CustomField>