unpackaged/main/default/objects/Off_site_agreement__c/fields/Signature_Final_Client__c.field-meta.xml
<CustomField>
    <fullName>Signature_Final_Client__c</fullName>
    <label>Signature Final Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>