unpackaged/main/default/objects/Off_site_agreement__c/fields/Signature_Final_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Signature_Final_Engineer__c</fullName>
    <label>Signature Final Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>