unpackaged/main/default/objects/Off_site_agreement__c/fields/Signature_Final_Engineer_Link__c.field-meta.xml
<CustomField>
    <fullName>Signature_Final_Engineer_Link__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,
&quot;https://aspect.co.uk/?page=gf_signature&amp;signature=&quot;&amp;SUBSTITUTE(  Signature_Final_Engineer__c  , &quot;.png&quot;, &quot;&quot;),&quot;https://aspect.co.uk.hyv.gotest.it/?page=gf_signature&amp;signature=&quot;&amp;SUBSTITUTE(  Signature_Final_Engineer__c  , &quot;.png&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Final Engineer Link</label>
    <type>Text</type>
</CustomField>