unpackaged/main/default/objects/Off_site_agreement__c/fields/Tradesperson_1__c.field-meta.xml
<CustomField>
    <fullName>Tradesperson_1__c</fullName>
    <label>Tradesperson (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>