unpackaged/main/default/objects/Off_site_agreement__c/fields/Tradesperson_2__c.field-meta.xml
<CustomField>
    <fullName>Tradesperson_2__c</fullName>
    <label>Tradesperson (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>