unpackaged/main/default/objects/Off_site_agreement__c/fields/Visit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Visit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Complete</label>
    <type>Checkbox</type>
</CustomField>