unpackaged/main/default/objects/Off_site_agreement__c/fields/Visit_Complete_Operative_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Visit_Complete_Operative_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Complete Operative Email Sent</label>
    <type>Checkbox</type>
</CustomField>