unpackaged/main/default/objects/Off_site_agreement__c/fields/Work_Completion_Image_2__c.field-meta.xml
<CustomField>
    <fullName>Work_Completion_Image_2__c</fullName>
    <label>Work Completion Image 2</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>