unpackaged/main/default/objects/Off_site_agreement__c/fields/Worktype__c.field-meta.xml
<CustomField>
    <fullName>Worktype__c</fullName>
    <label>Worktype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>