unpackaged/main/default/objects/Off_site_agreement__c/validationRules/Can_Only_tick_Accepted_Email_Sent_If_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Only_tick_Accepted_Email_Sent_If_Acc</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(Accepted_Email_Sent__c),
TEXT(Status__c)&lt;&gt;&#39;Accepted&#39;
)</errorConditionFormula>
    <errorMessage>You can only check the field &#39;Accepted Email Sent&#39; if the Off Site Agreement is in a Status of Accepted.</errorMessage>
</ValidationRule>