unpackaged/main/default/objects/Off_site_agreement__c/validationRules/Can_Only_tick_Pending_Email_Sent_If_Pend.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Only_tick_Pending_Email_Sent_If_Pend</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(Sent_to_Customer__c),
TEXT(Status__c)&lt;&gt;&#39;Pending&#39;
)</errorConditionFormula>
    <errorMessage>You can only check the field &#39;Pending Email Sent&#39; if the Off Site Agreement is in a Status of Pending.</errorMessage>
</ValidationRule>