unpackaged/main/default/objects/Off_site_agreement__c/validationRules/Description_works_Not_Edit_if_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_works_Not_Edit_if_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED( Description_of_works_to_carry_out__c ),
OR(TEXT(Status__c)=&#39;Accepted&#39;,TEXT(Status__c)=&#39;Completed&#39;),
$User.ProfileId&lt;&gt;$CustomMetadata.User_Profile_ID_Bypass_Rules_Validation__mdt.Integration_Profile.Profile_ID_15_Chars__c
)</errorConditionFormula>
    <errorMessage>You cannot edit/change the &#39;Description of works to carry out&#39; field once the Off Site Agreement has been Accepted or is Completed.</errorMessage>
</ValidationRule>