unpackaged/main/default/objects/Off_site_agreement__c/validationRules/Schedule_confirmed_Required_fields_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_confirmed_Required_fields_valid</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
Schedule_confirmed__c=true,

OR
(
ISBLANK(Allocated_Engineer__c),
ISBLANK(Materials_supplied_by_Aspect_details__c),
ISBLANK(Materials_supplied_by_Operative_details__c),
/*ISBLANK(PO_Number__c),*/
ISBLANK(Materials_collection_pt_Name_Address__c),
ISBLANK(Scheduled_Date__c),
AND
(
TEXT(Status__c) &lt;&gt; &#39;Accepted&#39;,
TEXT(Status__c) &lt;&gt; &#39;Scheduled&#39;,
TEXT(Status__c) &lt;&gt; &#39;Completed&#39;
)

)

)</errorConditionFormula>
    <errorMessage>You must complete: Allocated Engineer, Materials supplied by Aspect details, Materials supplied by Operative details, PO Number, Materials collection pt Name &amp; Address, Scheduled Date &amp; have a Status of &#39;Accepted&#39; before you can tick &#39;Schedule confirmed&#39;.</errorMessage>
</ValidationRule>