unpackaged/main/default/objects/Off_site_agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Raised_by_Engineer__c</columns>
    <columns>Agent_name__c</columns>
    <columns>Tradesperson_1__c</columns>
    <columns>Subtotal_charge__c</columns>
    <columns>Status__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Allocated_Engineer__c</columns>
    <columns>Schedule_confirmed__c</columns>
    <columns>Discount__c</columns>
    <columns>Preferred_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>