unpackaged/main/default/objects/Off_site_agreement__c/listViews/Deposit_Taken_Reconciled.listView-meta.xml
<ListView>
    <fullName>Deposit_Taken_Reconciled</fullName>
    <columns>NAME</columns>
    <columns>Siclops_Call_Ref__c</columns>
    <columns>Customer_first_name__c</columns>
    <columns>Customer_last_name__c</columns>
    <columns>Property_Address_Postcode__c</columns>
    <columns>Deposit_required__c</columns>
    <columns>Deposit_Received__c</columns>
    <columns>Worldpay_deposit_ID__c</columns>
    <columns>Deposit_Payment_Siclops_Ref__c</columns>
    <columns>Deposit_Payment_Reconciled__c</columns>
    <columns>Finance_Check_Deposit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deposit_Payment_Reconciled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted,Scheduled,Completed</value>
    </filters>
    <label>Deposit Taken (Reconciled)</label>
    <sharedTo>
        <role>General_Office_Manager</role>
    </sharedTo>
</ListView>