unpackaged/main/default/objects/Off_site_agreement__c/listViews/Engineer_Complete.listView-meta.xml
<ListView>
    <fullName>Engineer_Complete</fullName>
    <columns>NAME</columns>
    <columns>Siclops_Call_Ref__c</columns>
    <columns>Customer_last_name__c</columns>
    <columns>Property_Address_Postcode__c</columns>
    <columns>Deposit_Payment_Reconciled__c</columns>
    <columns>Deposit_Payment_Siclops_Ref__c</columns>
    <columns>Total_Payment_Received__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Worldpay_final_ID__c</columns>
    <columns>Final_Payment_Required__c</columns>
    <columns>Final_Payment_Received__c</columns>
    <columns>Siclops_Stage_1__c</columns>
    <columns>Siclops_Stage_2__c</columns>
    <columns>Payments_Reconciled__c</columns>
    <columns>Lead_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Payments_Reconciled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Engineer Complete</label>
    <sharedTo>
        <role>General_Office</role>
        <role>General_Office_Manager</role>
    </sharedTo>
</ListView>