unpackaged/main/default/objects/Off_site_agreement__c/listViews/Hollie_List_View.listView-meta.xml
<ListView>
    <fullName>Hollie_List_View</fullName>
    <columns>NAME</columns>
    <columns>Customer_first_name__c</columns>
    <columns>Customer_last_name__c</columns>
    <columns>Property_Address_Postcode__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Worldpay_final_ID__c</columns>
    <columns>Worldpay_deposit_ID__c</columns>
    <columns>Payments_Reconciled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Payments_Reconciled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Engineer Complete</label>
    <sharedTo>
        <role>Office</role>
    </sharedTo>
</ListView>