unpackaged/main/default/objects/Off_site_agreement__c/listViews/OSAs_Not_Accepted_Pending.listView-meta.xml
<ListView>
    <fullName>OSAs_Not_Accepted_Pending</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Raised_by_Engineer__c</columns>
    <columns>Agent_name__c</columns>
    <columns>Tradesperson_1__c</columns>
    <columns>Subtotal_charge__c</columns>
    <columns>Status__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Allocated_Engineer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Pending</value>
    </filters>
    <label>OSAs - Not Accepted (Pending)</label>
</ListView>