unpackaged/main/default/objects/Off_site_agreement__c/listViews/Pending_no_Work_Order.listView-meta.xml
<ListView>
    <fullName>Pending_no_Work_Order</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Agent_name__c</columns>
    <columns>Allocated_Engineer__c</columns>
    <columns>Customer_first_name__c</columns>
    <columns>Customer_last_name__c</columns>
    <columns>Property_Address_Postcode__c</columns>
    <columns>Subtotal_charge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending (no Work Order)</label>
</ListView>